[package]
name = "karet-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
aws-config = "1"
aws-sdk-s3 = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"

[dependencies.polars]
version = "0.53"
features = [
    "lazy",
    "csv",
    "parquet",
    "strings",
    "temporal",
    "concat_str",
    "regex",
    "dtype-date",
]

[dev-dependencies]
proptest = "1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
futures-util = "0.3"
testcontainers = "0.27"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal", "net", "io-util"] }

[features]
test-support = ["dep:proptest"]

[dependencies.proptest]
version = "1"
optional = true
